--- a/B2.md
+++ b/B2.md
@@ -335,7 +335,7 @@ Database Containers: Separate containers for different data storage needs
 │   ├── Dockerfile
 │   ├── src/
 │   └── requirements.txt
-├── feedback-processor
+├── feedback-loop
 │   ├── Dockerfile
 │   ├── src/
 │   └── requirements.txt
@@ -402,7 +402,7 @@ The system implements continuous improvement through:
 3. **Concept Drift Detection**: Alerts when customer behavior patterns change
 4. **Parameter Expansion**: Automated suggestion of new parameters to test
 
-## 7. Risk Mitigation
+## 6. Risk Mitigation
 
 Key risks and mitigation strategies:
 
@@ -421,7 +421,7 @@ Key risks and mitigation strategies:
    - Circuit breakers for dependent services
    - Caching strategies for high-volume periods
 
-## 6. Conclusion: 
+## 7. Conclusion: 
 Our real-time marketing campaign optimization system transforms the bank's marketing approach by:
 
 Personalizing at Scale: Delivering customized marketing experiences to millions of customers simultaneously.
