--- a/B2.md
+++ b/B2.md
@@ -20,7 +20,7 @@ Our real-time optimization algorithm transforms this approach by creating a dyna
 The proposed real-time campaign optimization system consists of five key components:
 
 1. **Data Processing Layer**: Ingests and processes customer interaction data and campaign performance metrics in real-time
-2. **Predictive Model Layer**: Predicts conversion probabilities based on customer and campaign characteristics
+2. **Predictive Models**: Machine learning models to predict campaign performance based on different parameter combinations
 3. **Optimization Engine**: Implements multi-armed bandit algorithms to determine optimal campaign parameters
 4. **API Service Layer**: Provides interfaces for marketing platforms and front-end systems
 5. **Monitoring & Analytics**: Tracks performance metrics and generates insights
