--- a/Notebooks/campaign optimization data cleaning.ipynb
+++ b/Notebooks/campaign optimization data cleaning.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "# make sure compatible versions\n",
-    "!pip install -r ../requirements.txt"
+    "# !pip install -r ../requirements.txt"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-06-21T21:51:00.224146Z",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,12 +58,12 @@
      "output_type": "stream",
      "text": [
       "Python           : 3.11.4 (main, Jul  5 2023, 08:54:11) [Clang 14.0.6 ]\n",
-      "pandas           : 1.5.3\n",
-      "numpy            : 1.26.4\n",
+      "pandas           : 2.2.3\n",
+      "numpy            : 2.2.3\n",
       "matplotlib       : 3.10.1\n",
       "seaborn          : 0.13.2\n",
-      "scikit-learn     : 1.5.2\n",
-      "skimpy           : 0.0.8\n"
+      "scikit-learn     : 1.6.1\n",
+      "skimpy           : 0.0.18\n"
      ]
     }
    ],
@@ -1378,7 +1378,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
