--- a/Notebooks/Segmentation_green.ipynb
+++ b/Notebooks/Segmentation_green.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,445 @@
     "columns_to_encode = ['Gender', 'CampaignChannel', 'CampaignType']\n",
     "df_encoded = pd.get_dummies(df_drop, columns=columns_to_encode, drop_first=False)\n",
     "scalar = StandardScaler()\n",
-    "df_scaled = scalar.fit_transform(df_encoded)\n"
+    "df_scaled = scalar.fit_transform(df_encoded)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>AdSpend</th>\n",
+       "      <th>ClickThroughRate</th>\n",
+       "      <th>ConversionRate</th>\n",
+       "      <th>WebsiteVisits</th>\n",
+       "      <th>PagesPerVisit</th>\n",
+       "      <th>TimeOnSite</th>\n",
+       "      <th>SocialShares</th>\n",
+       "      <th>EmailOpens</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Gender_Male</th>\n",
+       "      <th>CampaignChannel_Email</th>\n",
+       "      <th>CampaignChannel_PPC</th>\n",
+       "      <th>CampaignChannel_Referral</th>\n",
+       "      <th>CampaignChannel_SEO</th>\n",
+       "      <th>CampaignChannel_Social Media</th>\n",
+       "      <th>CampaignType_Awareness</th>\n",
+       "      <th>CampaignType_Consideration</th>\n",
+       "      <th>CampaignType_Conversion</th>\n",
+       "      <th>CampaignType_Retention</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>136912</td>\n",
+       "      <td>6497.870068</td>\n",
+       "      <td>0.043919</td>\n",
+       "      <td>0.088031</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.399017</td>\n",
+       "      <td>7.396803</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>69</td>\n",
+       "      <td>41760</td>\n",
+       "      <td>3898.668606</td>\n",
+       "      <td>0.155725</td>\n",
+       "      <td>0.182725</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2.917138</td>\n",
+       "      <td>5.352549</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46</td>\n",
+       "      <td>88456</td>\n",
+       "      <td>1546.429596</td>\n",
+       "      <td>0.277490</td>\n",
+       "      <td>0.076423</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.223619</td>\n",
+       "      <td>13.794901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32</td>\n",
+       "      <td>44085</td>\n",
+       "      <td>539.525936</td>\n",
+       "      <td>0.137611</td>\n",
+       "      <td>0.088004</td>\n",
+       "      <td>47</td>\n",
+       "      <td>4.540939</td>\n",
+       "      <td>14.688363</td>\n",
+       "      <td>89</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60</td>\n",
+       "      <td>83964</td>\n",
+       "      <td>1678.043573</td>\n",
+       "      <td>0.252851</td>\n",
+       "      <td>0.109940</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.046847</td>\n",
+       "      <td>13.993370</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7995</th>\n",
+       "      <td>21</td>\n",
+       "      <td>24849</td>\n",
+       "      <td>8518.308575</td>\n",
+       "      <td>0.243792</td>\n",
+       "      <td>0.116773</td>\n",
+       "      <td>23</td>\n",
+       "      <td>9.693602</td>\n",
+       "      <td>14.227794</td>\n",
+       "      <td>70</td>\n",
+       "      <td>13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7996</th>\n",
+       "      <td>43</td>\n",
+       "      <td>44718</td>\n",
+       "      <td>1424.613446</td>\n",
+       "      <td>0.236740</td>\n",
+       "      <td>0.190061</td>\n",
+       "      <td>49</td>\n",
+       "      <td>9.499010</td>\n",
+       "      <td>3.501106</td>\n",
+       "      <td>52</td>\n",
+       "      <td>13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7997</th>\n",
+       "      <td>28</td>\n",
+       "      <td>125471</td>\n",
+       "      <td>4609.534635</td>\n",
+       "      <td>0.056526</td>\n",
+       "      <td>0.133826</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2.853241</td>\n",
+       "      <td>14.618323</td>\n",
+       "      <td>38</td>\n",
+       "      <td>16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7998</th>\n",
+       "      <td>19</td>\n",
+       "      <td>107862</td>\n",
+       "      <td>9476.106354</td>\n",
+       "      <td>0.023961</td>\n",
+       "      <td>0.138386</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1.002964</td>\n",
+       "      <td>3.876623</td>\n",
+       "      <td>86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7999</th>\n",
+       "      <td>31</td>\n",
+       "      <td>93002</td>\n",
+       "      <td>7743.627070</td>\n",
+       "      <td>0.185670</td>\n",
+       "      <td>0.057228</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6.964739</td>\n",
+       "      <td>12.763660</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8000 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Age  Income      AdSpend  ClickThroughRate  ConversionRate  \\\n",
+       "0      56  136912  6497.870068          0.043919        0.088031   \n",
+       "1      69   41760  3898.668606          0.155725        0.182725   \n",
+       "2      46   88456  1546.429596          0.277490        0.076423   \n",
+       "3      32   44085   539.525936          0.137611        0.088004   \n",
+       "4      60   83964  1678.043573          0.252851        0.109940   \n",
+       "...   ...     ...          ...               ...             ...   \n",
+       "7995   21   24849  8518.308575          0.243792        0.116773   \n",
+       "7996   43   44718  1424.613446          0.236740        0.190061   \n",
+       "7997   28  125471  4609.534635          0.056526        0.133826   \n",
+       "7998   19  107862  9476.106354          0.023961        0.138386   \n",
+       "7999   31   93002  7743.627070          0.185670        0.057228   \n",
+       "\n",
+       "      WebsiteVisits  PagesPerVisit  TimeOnSite  SocialShares  EmailOpens  ...  \\\n",
+       "0                 0       2.399017    7.396803            19           6  ...   \n",
+       "1                42       2.917138    5.352549             5           2  ...   \n",
+       "2                 2       8.223619   13.794901             0          11  ...   \n",
+       "3                47       4.540939   14.688363            89           2  ...   \n",
+       "4                 0       2.046847   13.993370             6           6  ...   \n",
+       "...             ...            ...         ...           ...         ...  ...   \n",
+       "7995             23       9.693602   14.227794            70          13  ...   \n",
+       "7996             49       9.499010    3.501106            52          13  ...   \n",
+       "7997             35       2.853241   14.618323            38          16  ...   \n",
+       "7998             49       1.002964    3.876623            86           1  ...   \n",
+       "7999             15       6.964739   12.763660             2          18  ...   \n",
+       "\n",
+       "      Gender_Male  CampaignChannel_Email  CampaignChannel_PPC  \\\n",
+       "0           False                  False                False   \n",
+       "1            True                   True                False   \n",
+       "2           False                  False                 True   \n",
+       "3           False                  False                 True   \n",
+       "4           False                  False                 True   \n",
+       "...           ...                    ...                  ...   \n",
+       "7995         True                   True                False   \n",
+       "7996        False                  False                False   \n",
+       "7997        False                  False                False   \n",
+       "7998        False                  False                 True   \n",
+       "7999        False                   True                False   \n",
+       "\n",
+       "      CampaignChannel_Referral  CampaignChannel_SEO  \\\n",
+       "0                        False                False   \n",
+       "1                        False                False   \n",
+       "2                        False                False   \n",
+       "3                        False                False   \n",
+       "4                        False                False   \n",
+       "...                        ...                  ...   \n",
+       "7995                     False                False   \n",
+       "7996                     False                 True   \n",
+       "7997                      True                False   \n",
+       "7998                     False                False   \n",
+       "7999                     False                False   \n",
+       "\n",
+       "      CampaignChannel_Social Media  CampaignType_Awareness  \\\n",
+       "0                             True                    True   \n",
+       "1                            False                   False   \n",
+       "2                            False                    True   \n",
+       "3                            False                   False   \n",
+       "4                            False                   False   \n",
+       "...                            ...                     ...   \n",
+       "7995                         False                    True   \n",
+       "7996                         False                   False   \n",
+       "7997                         False                   False   \n",
+       "7998                         False                   False   \n",
+       "7999                         False                    True   \n",
+       "\n",
+       "      CampaignType_Consideration  CampaignType_Conversion  \\\n",
+       "0                          False                    False   \n",
+       "1                          False                    False   \n",
+       "2                          False                    False   \n",
+       "3                          False                     True   \n",
+       "4                          False                     True   \n",
+       "...                          ...                      ...   \n",
+       "7995                       False                    False   \n",
+       "7996                       False                    False   \n",
+       "7997                        True                    False   \n",
+       "7998                        True                    False   \n",
+       "7999                       False                    False   \n",
+       "\n",
+       "      CampaignType_Retention  \n",
+       "0                      False  \n",
+       "1                       True  \n",
+       "2                      False  \n",
+       "3                      False  \n",
+       "4                      False  \n",
+       "...                      ...  \n",
+       "7995                   False  \n",
+       "7996                    True  \n",
+       "7997                   False  \n",
+       "7998                   False  \n",
+       "7999                   False  \n",
+       "\n",
+       "[8000 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_encoded.to_csv('df_A1.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
