--- a/B2.md
+++ b/B2.md
@@ -15,19 +15,18 @@ Traditional banking marketing campaigns suffer from several critical limitations
 Our real-time optimization algorithm transforms this approach by creating a dynamic system that learns and adapts as customers interact with campaigns, maximizing ROI and customer engagement.
 
 ## 1. System Architecture Overview
-![ChatGPT Image Mar 28, 2025, 10_22_50 PM](https://github.com/user-attachments/assets/e7f6cabd-a45b-4ff0-87c3-16a4275287c6)
+<img width="1328" alt="Screenshot 2025-03-30 at 22 30 59" src="https://github.com/user-attachments/assets/d09d4502-5005-4720-9914-f81e47f7aa01" />
 
 The proposed real-time campaign optimization system consists of five key components:
 
-1. **Data Processing Layer**: Ingests and processes customer interaction data and campaign performance metrics in real-time
-2. **Predictive Models**: Machine learning models to predict campaign performance based on different parameter combinations
-3. **Optimization Engine**: Implements multi-armed bandit algorithms to determine optimal campaign parameters
-4. **API Service Layer**: Provides interfaces for marketing platforms and front-end systems
-5. **Monitoring & Analytics**: Tracks performance metrics and generates insights
+1. **Data Processing Layer**: Ingests and processes customer interaction data and campaign performance metrics in real-time, defines campaign parameters to work on
+2. **Real-Time Optimisaiton**: Implements multi-armed bandit algorithms to determine optimal campaign parameters
+3. **Predictive Models**: Machine learning models to predict campaign performance based on different parameter combinations, trained by results from part 2.
+4. **Monitoring & Analytics**: Tracks performance metrics and generates insights
 
 These components work together to create a feedback loop that continuously improves campaign performance through adaptive learning.
 
-## 2. Data Processing & Predictive Modeling
+## 2. Data Processing
 
 ## 3. Real-Time Optimization Algorithm Design
 
@@ -256,6 +255,8 @@ To identify the most effective optimization strategy, the system rotates among s
 
 ### 3.4 Integration with Predictive Models
 
+When the optimal parameters for different customers have become stable, we can the customer data to train a predictive model like XGBoost to predict optimal parameters for future custormers for fewer trail and error experiments.
+
 Our optimization algorithm employs a hybrid approach, combining insights from both bandit algorithms and predictive models:
 
 - **Bandit-Based Selection**: Selects campaign parameters based on exploration and real-time performance feedback.
@@ -267,7 +268,7 @@ Our optimization algorithm employs a hybrid approach, combining insights from bo
 This hybrid strategy ensures balanced decision-making, leveraging immediate learning from real-time interactions while benefiting from the bank’s accumulated predictive modeling expertise.
 
 
-### 3.5 Campaign Lifecycle Management
+### 3.5 Summary: Campaign Lifecycle Management
 
 The optimization algorithm adapts its behavior based on the campaign lifecycle stage:
 
@@ -282,7 +283,7 @@ The optimization algorithm adapts its behavior based on the campaign lifecycle s
    - Progressive traffic allocation to better-performing parameters
 
 3. **Optimization Phase**:
-   - Exploitation-focused strategy with minimal exploration
+   - Exploitation-focused strategy using predictive model with minimal exploration
    - Highly personalized parameter selection
    - Continuous monitoring for performance degradation
 
