--- a/B2.md
+++ b/B2.md
@@ -60,8 +60,7 @@ As time goes by, the system may observe:
 
 Continuous learning: The system records which combinations worked for which customer segments and refines its strategy over time, becoming increasingly personalized.
 
-#### 3.2.2 Workflow In Real Life:
-If we implement this in real life business, the decision process will follow these:
+Therefore, if we implement this in real life business, the decision process will be as followed:
 
 **Initial stage (cold start):**
 When a campaign first starts, there's no historical data
@@ -255,18 +254,15 @@ To identify the most effective optimization strategy, the system rotates among s
 
 ### 3.4 Integration with Predictive Models
 
-When the optimal parameters for different customers have become stable, we can the customer data to train a predictive model like XGBoost to predict optimal parameters for future custormers for fewer trail and error experiments.
+As campaign parameters begin to stabilize through continuous experimentation, we leverage accumulated customer interaction data to train predictive models such as XGBoost. This predictive modeling helps anticipate optimal parameters for new customers, significantly reducing the need for extensive trial-and-error.
 
-Our optimization algorithm employs a hybrid approach, combining insights from both bandit algorithms and predictive models:
+**Bandit-Derived Training Data**: Historical results from the bandit algorithms, based on real-time exploration and performance feedback, form the foundational training dataset.
 
-- **Bandit-Based Selection**: Selects campaign parameters based on exploration and real-time performance feedback.
-- **Predictive Model-Based Selection**: Uses established predictive models to recommend parameters grounded in historical data and domain expertise.
-- **Confidence Assessment**: Evaluates the confidence level of both the bandit-based and predictive model-based approaches.
-- **Hybrid Decision**: Selects parameters from the method with higher confidence, ensuring robust decisions even with limited immediate data.
-- **Recording and Analysis**: Logs the chosen selection method and confidence scores for subsequent performance analysis and refinement.
+**XGBoost Predictive Modeling**: The XGBoost model is trained on this historical data to predict effective campaign parameters. Its recommendations integrate both past performance patterns and domain-specific insights.
 
-This hybrid strategy ensures balanced decision-making, leveraging immediate learning from real-time interactions while benefiting from the bank’s accumulated predictive modeling expertise.
+**Hybrid Parameter Selection**: At mature stage, the system predominantly uses XGBoost-generated recommendations to guide parameter selection. However, if the predictive model's recommendations consistently underperform for specific customer segments, the bandit algorithm re-engages to experiment with alternative parameters. Periodically, the bandit algorithm also tests new or rarely-used parameters to uncover potential opportunities that predictive modeling alone might miss.
 
+This integrated approach ensures both efficient and informed parameter selection, maximizing performance by balancing stability from predictive modeling with ongoing exploratory insights.
 
 ### 3.5 Summary: Campaign Lifecycle Management
 
