new data csv added

--- a/Notebooks/Recommendation system.ipynb
+++ b/Notebooks/Recommendation system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,7 @@
     "from sklearn.model_selection import train_test_split, KFold\n",
     "from sklearn.preprocessing import StandardScaler,PolynomialFeatures\n",
     "from lightfm import LightFM\n",
-    "from lightfm.evaluation import precision_at_k, auc_score\n",
-    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "from lightfm.evaluation import precision_at_k\n",
     "import itertools\n",
     "import csv\n",
     "import seaborn as sns\n",
